@@ -35,5 +35,13 @@ Antonio Edson Ceccon (cecconae@ig.com.br)
 Vladimir Dolzhenko (bob_marlin@users.sourceforge.net)
     Developer (bug fixes)
     
-
+Alexander Bieber (fleque@users.sourceforge.net)
+    Developer
+    
+Tobias Langner (nl_carnage@users.sourceforge.net)
+    Developer
+    
+Uwe Voigt (http://sourceforge.net/users/uwe_ewald/)
+    Developer (patch-contribution)
+    
 BIG THANKS TO ALL!!!
