@@ -1,5 +1,8 @@
-Here is an overview of changes for each releases:
+Here is an overview of changes for each release:
 
+2007-09-30, fleque:
+- Fixes for patch to support loading of resources from fragments.
+      
 2007-09-14, fleque:
 - Included patch to support loading of resources from 
   fragment plug-ins (normal + nl).    
